@@ -2,26 +2,33 @@
  * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  * SPDX-License-Identifier: Apache-2.0
  */
-import java.util.Properties
+import aws.sdk.kotlin.gradle.dsl.configureLinting
+import aws.sdk.kotlin.gradle.dsl.configureNexus
+import aws.sdk.kotlin.gradle.util.typedProp
 
 buildscript {
-    repositories {
-        mavenCentral()
-        google()
-    }
-
-    val kotlinVersion: String by project
+    // NOTE: buildscript classpath for the root project is the parent classloader for the subprojects, we
+    // only need to add e.g. atomic-fu and build-plugins here for imports and plugins to be available in subprojects.
     dependencies {
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        classpath(libs.kotlinx.atomicfu.plugin)
+
+        // Add our custom gradle plugin(s) to buildscript classpath (comes from github source)
+        classpath("aws.sdk.kotlin:build-plugins") {
+            version {
+                require("0.2.2")
+            }
+        }
     }
 }
 
+@Suppress("DSL_SCOPE_VIOLATION") // TODO: Remove once https://youtrack.jetbrains.com/issue/KTIJ-19369 is fixed
 plugins {
-    kotlin("jvm") apply false
-    id("org.jetbrains.dokka")
-    id("io.github.gradle-nexus.publish-plugin") version "1.1.0"
-    id("org.jetbrains.kotlinx.binary-compatibility-validator") version "0.12.1"
+    alias(libs.plugins.dokka)
+    alias(libs.plugins.kotlinx.binary.compatibility.validator)
 }
+
+// configures (KMP) subprojects with our own KMP conventions and some default dependencies
+apply(plugin = "aws.sdk.kotlin.kmp")
 
 allprojects {
     repositories {
@@ -56,25 +63,7 @@ allprojects {
     }
 }
 
-val localProperties: Map<String, Any> by lazy {
-    val props = Properties()
-
-    listOf(
-        File(rootProject.projectDir, "local.properties"), // Project-specific local properties
-        File(rootProject.projectDir.parent, "local.properties"), // Workspace-specific local properties
-        File(System.getProperty("user.home"), ".sdkdev/local.properties"), // User-specific local properties
-    )
-        .filter(File::exists)
-        .map(File::inputStream)
-        .forEach(props::load)
-
-    props.mapKeys { (k, _) -> k.toString() }
-}
-
-fun Project.prop(name: String): Any? =
-    this.properties[name] ?: localProperties[name]
-
-if (project.prop("kotlinWarningsAsErrors")?.toString()?.toBoolean() == true) {
+if (project.typedProp<Boolean>("kotlinWarningsAsErrors") == true) {
     subprojects {
         tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
             kotlinOptions.allWarningsAsErrors = true
@@ -104,74 +93,25 @@ tasks.dokkaHtmlMultiModule.configure {
     removeChildTasks(excludeFromDocumentation)
 }
 
-apply(from = rootProject.file("gradle/codecoverage.gradle"))
+// Publishing
+configureNexus()
 
-if (
-    project.hasProperty("sonatypeUsername") &&
-    project.hasProperty("sonatypePassword") &&
-    project.hasProperty("publishGroupName")
-) {
-    apply(plugin = "io.github.gradle-nexus.publish-plugin")
-
-    val publishGroupName = project.property("publishGroupName") as String
-    group = publishGroupName
-
-    nexusPublishing {
-        packageGroup.set(publishGroupName)
-        repositories {
-            create("awsNexus") {
-                nexusUrl.set(uri("https://aws.oss.sonatype.org/service/local/"))
-                snapshotRepositoryUrl.set(uri("https://aws.oss.sonatype.org/content/repositories/snapshots/"))
-                username.set(project.property("sonatypeUsername") as String)
-                password.set(project.property("sonatypePassword") as String)
-            }
-        }
-    }
-}
-
-val ktlint by configurations.creating {
-    attributes {
-        attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
-    }
-}
-val ktlintVersion: String by project
-
-dependencies {
-    ktlint("com.pinterest:ktlint:$ktlintVersion")
-    ktlint(project(":ktlint-rules"))
-}
-
+// Code Style
 val lintPaths = listOf(
     "**/*.{kt,kts}",
     "!**/generated-src/**",
     "!**/smithyprojections/**",
 )
 
-tasks.register<JavaExec>("ktlint") {
-    description = "Check Kotlin code style."
-    group = "Verification"
-    classpath = configurations.getByName("ktlint")
-    main = "com.pinterest.ktlint.Main"
-    args = lintPaths
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-}
+configureLinting(lintPaths)
 
-tasks.register<JavaExec>("ktlintFormat") {
-    description = "Auto fix Kotlin code style violations"
-    group = "formatting"
-    classpath = configurations.getByName("ktlint")
-    main = "com.pinterest.ktlint.Main"
-    args = listOf("-F") + lintPaths
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-}
-
+// Binary compatibility
 apiValidation {
     nonPublicMarkers.add("aws.smithy.kotlin.runtime.InternalApi")
 
     ignoredProjects.addAll(
         setOf(
             "dokka-smithy",
-            "ktlint-rules",
             "aws-signing-tests",
             "test-suite",
             "http-test",
